<resources>
    <string name="app_name"></string>
    <string name="accommodation">Accommodation</string>
    <string name="activties">Things to do in Hull</string>
    <string name="schedule">My Schedule</string>
    <string name="parking">Parking</string>
    <string name="campusmap">Campus Map</string>
    <string name="homescreen">Home</string>
    <string name="uniofhullwebsite">University of
        Hull website</string>
    <string name="courtyard">Courtyard</string>
    <string name="westfield">Westfield</string>
    <string name="taylorcourt">Taylor Court</string>
    <string name="apptitle">Hull OpenDay</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="computerscience">Computer Science</string>
    <string name="geography">Geography</string>
    <string name="maths">Maths</string>
    <string name="history">History</string>
    <string name="criminology">Criminology</string>
    <string name="chemistry">Chemistry</string>
    <string name="computerscience_timetable">Computer Science - Open day timetable:</string>
    <string name="chemistry_timetable">Chemistry - Open day timetable:</string>
    <string name="criminology_timetable">Criminology - Open day timetable:</string>
    <string name="geography_timetable">Geography - Open day timetable:</string>
    <string name="history_timetable">History - Open day timetable:</string>
    <string name="maths_timetable">Maths - Open day timetable:</string>
    <string name="spinnerhint">Please select a Timetable</string>
    <string name="select_timetable">Select a Timetable for the open day you are attending:</string>
    <string-array name="timetables">
        <item>Please Select</item>
        <item>Chemistry</item>
        <item>Computer Science</item>
        <item>Criminology</item>
        <item>Geography</item>
        <item>History</item>
        <item>Maths</item>
    </string-array>
    <string name="courtyard_gallery">Photo Gallery</string>
    <string name="Googlemap">Live Map</string>


</resources>
